# MR_Tools

./: .gitignore  .gitlab-ci.yml  AllTools.code-workspace  CMakeLists.txt  Doxyfile  README.md  document_code_server.sh  document_code_user.sh
AlgoMarker_python_API/: AlgoMarker_minimal.py  convert_to_js.py  run_server.sh  server.py  simple_app_example.py  test_algomarker_lib.py
AlgoMarker_python_API/PopulationAnalyzer/: config.py  file_csv_parser.py  kill_main.sh  logger.py  logic.py  logic_med.py  models.py  ui.py
AlgoMarker_python_API/ServerHandler/: AlgoMarker.h  CMD_Args.h  CMakeLists.txt  compile.sh  main.cpp  utils.cpp  utils.h
AlgoMarker_python_API/ServerHandler/test/: test_api.py
AlgoMarker_python_API/docs/: conf.py  index.rst
AllTools/: CMakeLists.txt  full_build.sh
AllTools/CreateExplainReport/: CMakeLists.txt  Cmd_Args.h  main.cpp
AllTools/FilterSamples/: CMakeLists.txt  Cmd_Args.h  main.cpp
AllTools/HJson_Prettfier/: CMakeLists.txt  Cmd_Args.h  main.cpp
AllTools/PerformanceFromCalibration/: CMakeLists.txt  Cmd_Args.h  main.cpp
AllTools/TestCalibration/: CMakeLists.txt  Cmd_Args.h  main.cpp
AllTools/TestModelExternal/: CMakeLists.txt  Cmd_Args.h  main.cpp
AllTools/TimeRangeMerger/: CMakeLists.txt  Cmd_Args.h  main.cpp
AllTools/count_signal_len/: CMakeLists.txt  Cmd_Args.h  main.cpp
AllTools/find_unmapped_codes/: CMakeLists.txt  Cmd_Args.h  main.cpp
AllTools/model_signals_importance/: CMakeLists.txt  Cmd_Args.h  main.cpp
AutoValidation/AlgoMarker_scripts/: create_score_compare.sh  env.sh  full_test.sh  test_single.sh
AutoValidation/kits/: autotest  autotest.specific_test  generate_tests.sh
AutoValidation/test_kit/: env.sh  test_Development.sh  test_External_Silent_Run.sh  test_External_validation_after_SR.sh
Cancer/AnalyzeScores/: .gitignore
Cancer/LinearizeScore/: CMakeLists.txt
Cancer/TestProduct/: CMakeLists.txt  TestProduct.psess
Cancer/predictor/: .gitignore
Cancer/prepare_cancer_matrix/: .gitignore
CompareRocs/: compareROCs.py
CompareStatsFiles/: CMakeLists.txt
CompareStatsFiles/CompareStatsFiles/: CMakeLists.txt  Cmd_Args.h  Helper.cpp  Helper.h  main.cpp
DeploymentUtils/calibration/: calibration.cpp  calibration.h
DeploymentUtils/common/: common.cpp  common.h
DeploymentUtils/cv_calibration/: cv_calibration.cpp  cv_calibration.h
DictUtils/ontologies_scripts/: CPT_dicts.py  HCPCS_dicts.py  ISBT_dicts_from_nhsn_list.py  NDC_to_ATC.py  RX_to_ATC.new.py  RX_to_ATC.py  SNMI_dict_from_bioportal.py  atc_from_thin.py  code_without_mapping.py  create_ccs_sets.py  create_elix_charl_sets.py  dict_from_bioportal.py  elix_charl_defs.py  get_rxnorm_dicts.py  get_snomed.py  greeedy_mapping_icd.py  icd10_dict_from_cms.py  icd10_icd9_set_dict.py  icd9_dict_from_bioportal.py  icd9_dict_from_json.py  icd9_to_icd10_dict.py  parent_icd_son_snomed.py
DictUtils/rambam_codes/: convert_to_repo_codes.py  rambam_clinic_codes.csv  rambam_clinic_dicts.py  rambam_codes_utils.py  rambam_cons_dicts.py  rambam_dept_dicts.py  rambam_dept_hier.csv  rambam_diag_dicts.py  rambam_meds_fields_dicts.py  rambam_proc_dicts.py  rambam_proc_hier.csv  rambam_visittype_dicts.py  rambom_consultations_codes.csv  rambom_dept_codes.csv  rambom_dept_codes_old.csv  rambom_diag_codes.csv  rambom_med_form_codes.csv  rambom_med_freq_codes.csv  rambom_med_routs_codes.csv  rambom_med_units_codes.csv  rambom_proc_codes.csv  rambom_visittype_codes.csv  read_codes_from_xml.py
FilesUtils/: CMakeLists.txt
FilesUtils/PrintPreds/: CMakeLists.txt  Cmd_Args.h  main.cpp
FilesUtils/cross_files/: CMakeLists.txt  cross_files.cpp  cross_files.h
FilesUtils/search_codes/: CMakeLists.txt  Cmd_Args.h  main.cpp
Flow/: .gitignore  CMakeLists.txt
Flow/Flow/: CMakeLists.txt  Flow.cpp  Flow.h  basic_ops.cpp  basic_stats.cpp  cohort_ops.cpp  create_outcomes.cpp  flow_cohort_samples.cpp  flow_create.cpp  flow_models.cpp  flow_prints.cpp  matrix_ops.cpp  samples_ops.cpp  train_test_v2.cpp  train_test_v2.h
MedProcessUtils/: MedProcessUtils.sln.orig
MedProcessUtils/printModel/: CMakeLists.txt
Registries/Lists/: MI.txt  (+44 more)
RepoLoadUtils/: .gitignore  CMakeLists.txt
RepositoryUtilities/: CMakeLists.txt
SerializeConvertor/: CMakeLists.txt
ShapFeatureImportance/: shap_feature_importance_tool.py  shap_visualization.py
SignalsDependencies/: CMakeLists.txt  run.sh
action_outcome_effect/: CMakeLists.txt  README.md
action_outcome_effect/action_outcome_effect/: CMakeLists.txt  Cmd_Args.h  Helper.cpp  Helper.h  action_outcome_effect.cpp
action_outcome_effect/build_treat_effect_data/: CMakeLists.txt  Cmd_Args.h  Helper.cpp  Helper.h  build_treat_effect_data.cpp
bootstrap_app/: CMakeLists.txt
bootstrap_app/Config_Examples/: cohorts.txt  cohorts_for_label_filtering.txt  preds_for_label_filtering.csv  preds_for_sim_time_window.csv  run_examples.txt
bootstrap_app/bootstrap_app/: CMakeLists.txt  Cmd_Args.h  bootstrap_app.cpp  bootstrap_app.filters
change_model/: CMakeLists.txt  Cmd_Args.h  main.cpp
documentation/: convert_llama.sh  fetch_conf.py  index.html  index_similarity.html  llm_api.py  llm_api2.py  llm_api3.py  run_server.sh  run_server_similarity.sh  server.py  server_similarity.py  similarity.py
feature_importance_by_matching/: feature_importance_by_matching.py
model_runner/: CMakeLists.txt
quasi_oracle/: CMakeLists.txt
quasi_oracle/PythonScripts/: DataReader.py  base_predictor.py  ite_predictor.py  ite_predictor_orig.py
quasi_oracle/analyzer/: analyzer.cpp  analyzer.h
quasi_oracle/checker_runner/: checker_runner.cpp  checker_runner.h
quasi_oracle/common/: common.cpp  common.h
quasi_oracle/g_comp/: g_comp.cpp  g_comp.h  g_comp_configuration.cpp  g_comp_configuration.h
quasi_oracle/qo_runner/: condor_header.txt  condor_header_with_high_mem_req.txt  qo_runner.cpp  qo_runner.h
quasi_oracle/quasi_oracle/: config_example.txt  configuration.cpp  configuration.h  quasi_oracle.cpp  quasi_oracle.h
quasi_oracle/utils/: utils.cpp  utils.h
test_algomarker/: am_tester.py  file_api_to_load_files.py  show_explainer_output.py  test_explainer_values.py
(+1685 files in other folders)
